# opengl-testing

./: .clang-format  CMakeLists.txt
cmake/: CMakeRC.cmake
inc/oglc/: handles.hpp  linalg.hpp
src/: oglc-test.cpp
src/01-triangle/: main.cpp
src/02-uniforms/: CMakeLists.txt  main.cpp
src/03-attributes/: CMakeLists.txt  fragment.glsl  main.cpp  vertex.glsl
src/03-textures/: CMakeLists.txt  main.cpp
src/04-textures/: CMakeLists.txt  fragment.glsl  main.cpp  vertex.glsl
src/triangle/: CMakeLists.txt  fragment.glsl  main.cpp  triangle.cpp
src/uniforms/: CMakeLists.txt  fragment.glsl  main.cpp  uniforms.cpp
